# rust-ai

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.yml
docs/: 404.html  index.html  mdbook.html  models.html  ollama_sample.html  print.html  rag_compare.html  rag_elasticsearch.html  rag_postgres.html  rag_qdrant.html  rag_sample.html  rag_surrealdb.html  rag_surrealdb_extends.html  rag_surrealdb_with_db.html  searcher-c2a407aa.js  searchindex-38aca64d.js  searchindex-45aefdd2.js  searchindex-5b9af175.js  searchindex-7f5116de.js  searchindex-d461699b.js  searchindex-f093e38d.js  toc-0581c7e9.js  toc-3dabf50a.js  toc-3f8188f6.js  toc-7b23f7e2.js  toc-ab735a58.js  toc-f27b7f52.js  toc.html
md-book/: book.toml
md-book/src/: SUMMARY.md  mdbook.md  models.md  ollama_sample.md  rag_compare.md  rag_elasticsearch.md  rag_postgres.md  rag_qdrant.md  rag_sample.md  rag_surrealdb.md  rag_surrealdb_extends.md  rag_surrealdb_with_db.md
ollama_sample/: Cargo.toml
ollama_sample/src/: main.rs
rag_elasticsearch/: Cargo.toml
rag_elasticsearch/src/: main.rs
rag_postgres/: Cargo.toml
rag_postgres/src/: main.rs
rag_qdrant/: Cargo.toml
rag_qdrant/src/: main.rs
rag_sample/: Cargo.toml
rag_surrealdb/: Cargo.toml
rag_surrealdb/src/: main.rs
rag_surrealdb_extends/: Cargo.toml
rag_surrealdb_extends/src/: main.rs
rag_surrealdb_with_db/: Cargo.toml
rag_surrealdb_with_db/src/: main.rs
