[workspace]
members = [
    "ollama_sample",
    "rag_surrealdb",
    "rag_surrealdb_with_db",
    "rag_qdrant",
    "rag_elasticsearch",
    "rag_surrealdb_extends"
]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
pdf-extract = "0.10"
uuid = { version = "1.0", features = ["v4"] }